labs/03-kyverno-policies/02-tls-min-policy/test-tls-min-policy-invalid.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: test-tls-min-policy-invalid
  namespace: default
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
  tls:
    minVersion: "1.1"
    maxVersion: "1.3"
    alpnProtocols:
      - h2
      - http/1.1
