labs/03-kyverno-policies/02-tls-min-policy/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: tls-min-policy-test
policies:
  - tls-min-policy.yaml
resources:
  - test-tls-min-policy.yaml
  - test-tls-min-policy-invalid.yaml
results:
  - policy: tls-min-policy
    rule: check-tls-min-policy
    resources: 
      - "test-tls-min-policy"
    kind: ClientTrafficPolicy
    result: pass
  - policy: tls-min-policy
    rule: check-tls-min-policy
    resources: 
      - "test-tls-min-policy-invalid"
    kind: ClientTrafficPolicy
    result: fail
